<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout


        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_number"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_date"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_stage"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_state"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_type"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_todo"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>
</LinearLayout>