<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_number"/>


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/element_name"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/extra"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/kun_number"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="700dp"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <ListView
            android:id="@+id/list"
            android:layout_width="475dp"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary_elements"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

</LinearLayout>
</LinearLayout>